--- a/resources/public/css/map.css
+++ b/resources/public/css/map.css
@@ -4,6 +4,12 @@ span.incidenttype {
 
 div.incident{ 
   margin-bottom: 5px;
- }
+}
+
+
+#map_canvas{ 
+  width:100%; 
+  height:640px; 
+}
 
 /* span.datestamp { font-weight: italic; } */
