--- a/resources/public/css/map.css
+++ b/resources/public/css/map.css
@@ -7,7 +7,11 @@ span.incidenttype {
 }
 
 div.incident{ 
-  margin-bottom: 5px;
+    margin-bottom: 5px;
+    width: 300px;
+    background: white;
+    padding: 4px;
+    border: 1px solid gray;
 }
 
 
